# kphtools

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  codex_faker.json  config.yaml  download_symbols.py  dump_symbols.py  generate_reference_yaml.py  ida_code_region_export_template.py  ida_llm_decompile.py  ida_llm_prompt.py  ida_llm_response.py  ida_llm_specs.py  ida_llm_targets.py  ida_llm_utils.py  ida_llm_validation.py  ida_mcp_resolver.py  ida_mcp_session.py  ida_preprocessor_common.py  ida_reference_export.py  ida_reference_export_template.py  ida_skill_preprocessor.py  migrate_symboldir.py  pdb_resolver.py  pe_resolver.py  pyproject.toml  requirements.txt  reverse_symbols.py  symbol_artifacts.py  symbol_config.py  update_symbols.py  upload_server.py
.serena/: project.yml
docs/: find-AlpcpDeletePort.md  llm-decompile-cs2-parity-audit.md
ida/: generate_mapping.py
ida_preprocessor_scripts/: __init__.py  _extract_ntapi.py  find-AlpcAddHandleTableEntry.py  find-AlpcAttributes-AND-AlpcAttributesFlags-AND-AlpcCommunicationInfo.py  find-AlpcAttributes.py  find-AlpcAttributesFlags.py  find-AlpcClientCommunicationPort.py  find-AlpcCommunicationInfo.py  find-AlpcConnectionPort.py  find-AlpcHandleTable-AND-AlpcPortContext-AND-AlpcPortObjectLock.py  find-AlpcHandleTable-AND-AlpcPortContext.py  find-AlpcHandleTable.py  find-AlpcHandleTableLock.py  find-AlpcOwnerProcess.py  find-AlpcPortContext.py  find-AlpcPortObjectLock.py  find-AlpcSequenceNo-AND-AlpcState.py  find-AlpcSequenceNo.py  find-AlpcServerCommunicationPort.py  find-AlpcState.py  find-AlpcpCreateClientPort.py  (+80 more)
(+157 files in other folders)
